# plotly-resampler

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.py  dashboard.py  mkdocs.yml  package-lock.json  package.json  plotlydatamirror.py  pyproject.toml  requirements.txt  test.html  tmp.py  versions.json
.github/: FUNDING.yml  deploy-gh-pages.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  deploy-docs.yml  deploy-mkdocs.yml  lint.yml  test.yml
assets/: coarse_fine.js
docs/: FAQ.html  aggregation.html  api_reference.html  dash_app_integration.html  figure_resampler.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  registering.html  search.html  searchindex.js  utils.html
docs/_autosummary/: plotly_resampler.aggregation.aggregation_interface.html  plotly_resampler.aggregation.aggregators.html  plotly_resampler.aggregation.algorithms.html  plotly_resampler.aggregation.algorithms.lttb_c.html  plotly_resampler.aggregation.algorithms.lttb_py.html  plotly_resampler.aggregation.algorithms.lttbc.html  plotly_resampler.aggregation.gap_handler_interface.html  plotly_resampler.aggregation.gap_handlers.html  plotly_resampler.aggregation.html  plotly_resampler.aggregation.plotly_aggregator_parser.html  plotly_resampler.figure_resampler.figure_resampler.html  plotly_resampler.figure_resampler.figure_resampler_interface.html  plotly_resampler.figure_resampler.figurewidget_resampler.html  plotly_resampler.figure_resampler.html  plotly_resampler.figure_resampler.utils.html  plotly_resampler.registering.html
docs/_modules/: index.html
docs/_sources/: FAQ.rst.txt  aggregation.rst.txt  api_reference.rst.txt  dash_app_integration.rst.txt  figure_resampler.rst.txt  getting_started.rst.txt
docs/_static/: documentation_options.js
docs/downsamplers/: downsamplers.html  downsampling_interface.html  index.html
docs/pdoc_include/: root_documentation.md
docs/pdoc_template/: config.mako  css.mako  head.mako  html.mako  logo.mako
docs/sphinx/: FAQ.rst  aggregation.rst  api_reference.rst  conf.py  figure_resampler.rst  getting_started.rst  index.rst  registering.rst
examples/: README.md  basic_example.ipynb  datashader.ipynb  figurewidget_example.ipynb  helper.py  other_examples.ipynb  requirements.txt
examples/dash_apps/: 01_minimal_global.py  01_minimal_global_overview.py  02_minimal_cache.py  03_minimal_cache_dynamic.py  04_minimal_cache_overview.py  05_cache_overview_subplots.py  06_cache_overview_range_buttons.py  11_sine_generator.py  12_file_selector.py  13_coarse_fine.py  14_modify_traces.py  15_coarse_fine.py  16_coarse_fine_subplots.py  callback_helpers.py  construct_dynamic_figures.py  dash_app.py  dash_app_coarse_fine.py  dash_app_course_fine.py  dash_app_folder.py  dash_app_minimal_cache.py  dash_app_minimal_global.py  usage.py
examples/data/: df_gusb.parquet  df_pc_test.parquet  processed_gsr.parquet
examples/example_utils/: loglttb.py
examples/other_apps/: streamlit_app.py
latest/: 404.html  index.html
latest/FAQ/: index.html
latest/dash_app_integration/: index.html
latest/getting_started/: index.html
main/: 404.html  index.html  sitemap.xml
main/FAQ/: index.html
main/dash_app_integration/: index.html
main/getting_started/: index.html
main/search/: search_index.json
mkdocs/: FAQ.md  dash_app_integration.md  gen_ref_pages.py  getting_started.md  index.md
mkdocs_deployment/: 404.html  index.html  sitemap.xml
mkdocs_deployment/FAQ/: index.html
mkdocs_deployment/dash_app_integration/: index.html
mkdocs_deployment/getting_started/: index.html
mkdocs_deployment/search/: search_index.json
plotly_dynamic_resampling/: __init__.py  dashboard.py  figure_resampler.py  plotlydatamirror.py
plotly_dynamic_resampling/downsamplers/: __init__.py  downsamplers.py  downsampling_interface.py  resampling_interface.py
plotly_resampler/: __init__.py  figure_resampler.py  module.py  registering.py  utils.py
plotly_resampler/aggregation/: __init__.py  aggregation_interface.py  aggregators.py  gap_handler.py  gap_handler_interface.py  gap_handlers.py  plotly_aggregator_parser.py
plotly_resampler/downsamplers/: __init__.py  downsamplers.py  downsampling_interface.py
plotly_resampler/figure_resampler/: __init__.py  figure_resampler.py  figure_resampler_interface.py  figurewidget_resampler.py  jupyter_dash_persistent_inline_output.py  utils.py
plotly_resampler/trace_updater/: README.md  TraceUpdater.py  __init__.py  _imports_.py  metadata.json  package-info.json  trace_updater.min.js  trace_updater.min.js.map
sphinx/: api_reference.rst  conf.py  dash_app_integration.rst  downsamplers.rst  figure_resampler.rst  getting_started.rst  index.rst  modules.rst
tests/: conftest.py  fr_selenium.py  log_processing.ipynb  minimal_variable_threads.py  test_aggregators.py  test_composability.py  test_downsamplers.py  test_dynamic_properties.py  test_figure_resampler.py  test_figure_resampler_selenium.py  test_figurewidget_resampler.py  test_multiple_axes.py  test_plotly_express.py  test_rangeslider.py  test_registering.py  test_serialization.py  test_utils.py  test_visual_gain_threads.py  utils.py
v0.10.0/: 404.html  gen_ref_pages.py  index.html  sitemap.xml
v0.10.0/FAQ/: index.html
v0.10.0/dash_app_integration/: index.html
v0.10.0/getting_started/: index.html
v0.10.0/search/: search_index.json
v0.11.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.11.0/FAQ/: index.html
v0.11.0/dash_app_integration/: index.html
v0.11.0/getting_started/: index.html
v0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/FAQ/: index.html
v0.9.0/dash_app_integration/: index.html
v0.9.0/getting_started/: index.html
v0.9.0/search/: search_index.json
v0.9.1/: 404.html  index.html  sitemap.xml
v0.9.1/FAQ/: index.html
v0.9.1/dash_app_integration/: index.html
v0.9.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.2rc2/: 404.html  index.html  sitemap.xml
v0.9.2rc3/: 404.html  index.html  objects.inv  sitemap.xml
(+190 files in other folders)
