[tool.poetry]
name = "plotly-resampler"  # Do not forget to update the __init__.py __version__ variable
version = "0.10.0"
description = "Visualizing large time series with plotly"
authors = ["Jonas Van Der Donckt", "Jeroen Van Der Donckt", "Emiel Deprost"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/predict-idlab/plotly-resampler"
documentation = "https://predict-idlab.github.io/plotly-resampler/latest"
keywords = ["time-series", "visualization", "resampling", "plotly", "plotly-dash"]
packages = [
    { include = "plotly_resampler" }
]
include = [
    # C extensions must be included in the wheel distributions
    {path = "plotly_resampler/aggregation/algorithms/*.so", format = "wheel"},
    {path = "plotly_resampler/aggregation/algorithms/*.pyd", format = "wheel"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.7.1"
jupyter-dash = { version = ">=0.4.2", optional = true }
plotly = "^5.5.0"
dash = ">=2.9.0"  # Patch is supported from 2.9.0
pandas = ">=1"
numpy = [
    { version = ">=1.14", python = "<3.11" },
    { version = ">=1.24", python = ">=3.11" }
]
orjson = "^3.8.0"  # Faster json serialization
# Optional dependencies
Flask-Cors = { version = "^3.0.10", optional = true }
# Lock kaleido dependency until https://github.com/plotly/Kaleido/issues/156 is resolved
kaleido = {version = "0.2.1", optional = true}
tsdownsample = ">=0.1.3"

[tool.poetry.extras]
# Optional dependencies
inline_persistent = ["kaleido", "Flask-Cors", "jupyter-dash"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
selenium = "4.2.0"
pytest-selenium = "^2.0.1"
selenium-wire = "^5.0"
pyarrow = [
    { version = "^10.0", python = "<3.8" },
    { version = "^15.0", python = ">=3.8" }
]
ipywidgets = "^7.7.1"
memory-profiler = "^0.60.0"
line-profiler = "^4.0"
ruff = "^0.0.262"
black = "^22.6.0"
pytest-lazy-fixture = "^0.6.3"
# yep = "^0.4"  # c code profiling
mkdocs = "^1.5.3"
mkdocstrings = "^0.20.0"
mkdocstrings-python = [
    { version = "^1.1.2", python="<3.8" },
    { version = "^1.7.3", python=">=3.8" }
]
griffe = [
    { version = "^0.30.1", python = "<3.8" },
    { version = ">=0.32.0", python = ">=3.8" }
]
mkdocs-gen-files = "^0.5.0"
mike = "^1.1.2"
mkdocs-material = "^9.1.18"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
cffi = [
    { version = ">=1.15", python = "<3.8" },
    { version = ">=1.16", python = ">=3.12" }
]

# Linting
[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
ignore = ["E501"] # Never enforce `E501` (line length violations).
[tool.ruff.per-file-ignores]
"tests/test_registering.py" = ["F401", "F811"]
"tests/test_serialization.py" = ["F401", "F811"]

# Formatting
[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
